# pulsecore-rapid-crisis-response

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  sqlite.db  test_sos.ps1
backend/migrations/: 20240424000000_init.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: ai.rs  auth.rs  incidents.rs  mod.rs  ws.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/utils/: auth.rs  email.rs  error.rs  jwt.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AiChatWidget.tsx  LiveChatWidget.tsx  TiltedGridBackground.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: About.tsx  Contact.tsx  Dashboard.tsx  ForgotPassword.tsx  Landing.tsx  Login.tsx  Settings.tsx
frontend/src/store/: store.ts
frontend/src/utils/: text.tsx
